@@ -1,0 +1,21 @@
+gui/sitemap
+===========
+
+.. dfhack-tool::
+    :summary: List and zoom to locations at the current site.
+    :tags: adventure fort inspection
+
+This simple UI shows a searchable list of all locations -- temples, guildhalls,
+hospitals, taverns, and libraries -- at the current site. Clicking on a list
+item will zoom the map to that location. If the location has multiple zones
+attached to it, clicking again will zoom to each component zone in turn.
+
+This also works in adventure mode, though of course you have to be visiting a
+site for the list to show any locations.
+
+Usage
+-----
+
+::
+
+    gui/sitemap
